infra/terraform/rds.tf
resource "aws_db_parameter_group" "practice_terrafrom_rds_pg" {
  name = "practice-terrafrom-rds-pg"
  family = "mysql5.7"

  parameter {
    name  = "character_set_database"
    value = "utf8mb4"
  }

  parameter {
    name  = "character_set_server"
    value = "utf8mb4"
  }
}

resource "aws_db_option_group" "practice_terrafrom_rds_og" {
  name = "practice-terrafrom-rds-og"
  engine_name = "mysql"
  major_engine_version = "5.7"

  option {
    option_name = "MARIADB_AUDIT_PLUGIN"
  }
}

resource "aws_db_subnet_group" "practice_terrafrom_rds_sg" {
  name       = "practice-terrafrom-rds-sg"
  subnet_ids = [aws_subnet.practice_terrafrom_private_subnet_1a.id, aws_subnet.practice_terrafrom_private_subnet_1c.id]
}


resource "aws_db_instance" "practice_terrafrom_rds" {
  identifier = "practice-terrafrom"
  engine         = "mysql"
  engine_version = "5.7.25"
  instance_class = "db.t3.small"
  allocated_storage     = 20
  max_allocated_storage = 100
  storage_type          = "gp2"
  storage_encrypted     = true
  kms_key_id = aws_kms_key.practice_terrafrom_kms.arn
  username = "admin"
  password = "VeryStrongPassword!"
  multi_az = true
  publicly_accessible = false
  backup_window           = "09:10-09:40"
  backup_retention_period = 30
  maintenance_window         = "mon:10:10-mon:10:40"
  auto_minor_version_upgrade = false
  deletion_protection = false
  skip_final_snapshot = true
  port                = 3306
  apply_immediately      = false
  vpc_security_group_ids = [module.mysql_sg.security_group_id]
  parameter_group_name   = aws_db_parameter_group.practice_terrafrom_rds_pg.name
  option_group_name      = aws_db_option_group.practice_terrafrom_rds_og.name
  db_subnet_group_name   = aws_db_subnet_group.practice_terrafrom_rds_sg.name

  lifecycle {
    ignore_changes = [password]
  }
}

module "mysql_sg" {
  source = "./security_group"
  name   = "mysql-sg"
  vpc_id = aws_vpc.practice_terrafrom_vpc.id
  port   = 3306
  cidr_blocks = [aws_vpc.practice_terrafrom_vpc.cidr_block]
}
